# docimp

./: .editorconfig  .envrc  .gitignore  .prettierignore  .prettierrc  .venv  LICENSE  Makefile  PLAN_PR170_ROUND2.md  README.md  docimp.config.js  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  test-config-system.sh  test-plugins.js  test_writer_patterns.py  verify_issue_67.py
.claude/: continue-issue-234.md
.github/workflows/: ci.yml  content-policy.yml
.husky/: README.md  commit-msg  post-checkout  pre-commit
analyzer/: pyproject.toml  pytest.ini
analyzer/src/: __init__.py  __main__.py  main.py
analyzer/tests/: __init__.py  test_analyze_auto_clean.py  test_analyzer.py  test_audit.py  test_audit_session_state.py  (+40 more)
cli/: .npmrc  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: LIMITATIONS.md  json-schema.md  patterns
examples/: test_commonjs.cjs  test_javascript_patterns.js  test_simple.py  test_simple.ts
plugins/: README.md  jsdoc-style.js  validate-types.js
test-fixtures/: shortuuid-vectors.json
test-samples/: MANUAL_TEST_PROMPT_WORDINGS.md  PROMPT_MODIFICATIONS.md  README.md  README_PROMPT_TESTING.md  RESULTS_OPTION_A.md  RESULTS_OPTION_B.md  RESULTS_OPTION_C.md  expected-results.json  test-audit-resume.sh  test-incremental-analysis.sh  test-path-resolution.sh  test-prompt-wordings.sh  test-resume-improve.sh  test-status-command.sh  test-undo-integration.sh  test-validate-types-cache.js  test-workflow-state-integration.sh  test-workflows-improve.sh  test-workflows.sh
(+260 files in other folders)
