[project]
name = "docimp-analyzer"
version = "1.1.0b1"
description = "Python analysis engine for DocImp - impact-driven documentation coverage tool"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0" }

dependencies = [
    "anthropic>=0.72.0,<1.0.0",
    "pydantic>=2.12.3,<3.0.0",
    "pydantic-core>=2.41.4,<3.0.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyzer"]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "DTZ",   # flake8-datetimez
    "UP",    # pyupgrade
    "PTH",   # flake8-use-pathlib
    "I",     # isort
    "SIM",   # flake8-simplify
    "PERF",  # perflint
    "YTT",   # flake8-2020
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["analyzer/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
